--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DISCORD_BOT_TOKEN=MTM9NjM5Njg1OTI8MTc1OTk4OA.GR6uca.bKnxusNoCyBoMztZHhvGJj-RyViibsiY7O_Bkk
-BOT_TOKEN=MTM9NjM5Njg1OTI8MTc1OTk4OA.GR6uca.bKnxusNoCyBoMztZHhvGJj-RyViibsiY7O_Bkk
-DISCORD_CLIENT_ID=1386396859261779988
-CLIENT_ID=1386396859261779988
-DISCORD_CLIENT_SECRET=0W_hWWBsUc1MPyoH1I6SuBThy1mlKF6l
+DISCORD_BOT_TOKEN=MTM5MzYyMTk1MTkwOTQ2MjA4Ng.GiXpUH.dIxcrnfggPc2o14LpKamocJXrrie_WXQjXf_IE
+BOT_TOKEN=MTM5MzYyMTk1MTkwOTQ2MjA4Ng.GiXpUH.dIxcrnfggPc2o14LpKamocJXrrie_WXQjXf_IE
+DISCORD_CLIENT_ID=1393621951909462086
+CLIENT_ID=1393621951909462086
+DISCORD_CLIENT_SECRET=zyKWetGFYWJsqzDXvC-A4N6qm-bdAMyq
 DISCORD_CALLBACK_URL=http://localhost:3000/auth/discord/callback
 PORT=3000
 NODE_ENV=development
