--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ BOT_TOKEN=MTM5MzYyMTk1MTkwOTQ2MjA4Ng.GiXpUH.dIxcrnfggPc2o14LpKamocJXrrie_WXQjXf_
 DISCORD_CLIENT_ID=1393621951909462086
 CLIENT_ID=1393621951909462086
 DISCORD_CLIENT_SECRET=zyKWetGFYWJsqzDXvC-A4N6qm-bdAMyq
-DISCORD_CALLBACK_URL=http://localhost:3000/auth/discord/callback
+DISCORD_CALLBACK_URL=https://forensicbyte-security.onrender.com/auth/discord/callback
 PORT=3000
 NODE_ENV=development
 SESSION_SECRET=afa1d8d1d392ffda91993170f6f6da05
