--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DISCORD_BOT_TOKEN=MTM5MzYyMTk1MTkwOTQ2MjA4Ng.GiXpUH.dIxcrnfggPc2o14LpKamocJXrrie_WXQjXf_IE
-BOT_TOKEN=MTM5MzYyMTk1MTkwOTQ2MjA4Ng.GiXpUH.dIxcrnfggPc2o14LpKamocJXrrie_WXQjXf_IE
+DISCORD_BOT_TOKEN=MTM5MzYyMTk1MTkwOTQ2MjA4Ng.GHsTUA.0wZ3tgR9FpByScidEAVlb2Qp0tbPQxDDVGAkqA
+BOT_TOKEN=MTM5MzYyMTk1MTkwOTQ2MjA4Ng.GHsTUA.0wZ3tgR9FpByScidEAVlb2Qp0tbPQxDDVGAkqA
 DISCORD_CLIENT_ID=1393621951909462086
 CLIENT_ID=1393621951909462086
 DISCORD_CLIENT_SECRET=zyKWetGFYWJsqzDXvC-A4N6qm-bdAMyq
